--- a/huashi.html
+++ b/huashi.html
@@ -195,6 +195,21 @@
             <!--第二行-->
             <div class="row">
                 <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://gjs.ecnu.edu.cn/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://gjs.ecnu.edu.cn/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="./assets/images/logos/hsgjs.png" class="lozad img-circle" width="40">
+                            </a>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>华东师范大学古籍所</strong>
+                                </a>
+                                <p class="overflowClip_2">华东师范大学古籍所</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://mail.stu.ecnu.edu.cn/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://mail.stu.ecnu.edu.cn/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
