--- a/huashi.html
+++ b/huashi.html
@@ -261,6 +261,21 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.guoxuedashi.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.guoxuedashi.com/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="./assets/images/logos/gxds.png" class="lozad img-circle" width="40">
+                            </a>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>国学大师</strong>
+                                </a>
+                                <p class="overflowClip_2">国学第一网</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <br>
             <!-- END 文献检索-->
