--- a/huashi.html
+++ b/huashi.html
@@ -224,6 +224,21 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://chinese.fudan.edu.cn/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://chinese.fudan.edu.cn/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="./assets/images/logos/fdzw.png" class="lozad img-circle" width="40">
+                            </a>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>复旦大学中文系</strong>
+                                </a>
+                                <p class="overflowClip_2">复旦大学中国语言文学系</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <br>
             <!-- END 学校主页 -->
