--- a/fudan.html
+++ b/fudan.html
@@ -96,8 +96,13 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#journals" class="smooth">
-                                    <span class="title">Journals</span>
+                                <a href="#学术期刊" class="smooth">
+                                    <span class="title">学术期刊</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#英语学习" class="smooth">
+                                    <span class="title">英语学习</span>
                                 </a>
                             </li>
                         </ul>
@@ -234,7 +239,7 @@
 
 
             <!--杂志-->
-            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="journals"></i>Journals</h4>
+            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="学术期刊"></i>学术期刊</h4>
             <div class="row">
                 <div class="col-sm-3">
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.nature.com/nature/current-issue', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.nature.com/">
@@ -272,7 +277,7 @@
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.cell.com/cell/current', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.cell.com/cell/current">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
-                                <img data-src="./assets/images/logos/pnas.png" class="lozad img-circle" width="40">
+                                <img data-src="./assets/images/logos/cell.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
@@ -303,6 +308,34 @@
             <!--第二行-->
             <br>
             <!-- END 杂志-->
+
+            <!--英语学习-->
+            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="英语学习"></i>英语学习</h4>
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.youzack.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.youzack.com/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="./assets/images/logos/youzack.png" class="lozad img-circle" width="40">
+                            </a>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>Youzack</strong>
+
+                                </a>
+                                <p class="overflowClip_2">杨中科自制英语学习网站</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!--第二行-->
+            <br>
+            <!-- END 杂志-->
+
+
+
 
 
             
