添加typed效果，添加搜索栏“

--- a/huashi.html
+++ b/huashi.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./assets/css/xenon-components.css">
     <link rel="stylesheet" href="./assets/css/xenon-skins.css">
     <link rel="stylesheet" href="./assets/css/nav.css">
+    <link rel="stylesheet" href="./assets/css/search.css">
     <script src="./assets/js/jquery-1.11.1.min.js"></script>
       <!--百度统计工具-->
       <script>
@@ -128,6 +129,7 @@
             </div>
         </div>
         <div class="main-content" style="background-color: ;">
+            <script src="./assets/js/search.js"></script>
             <!-- 学校网页 -->
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="学校网页"></i>学校网页</h4>
             <div class="row">
