--- a/fudan.html
+++ b/fudan.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./assets/css/xenon-components.css">
     <link rel="stylesheet" href="./assets/css/xenon-skins.css">
     <link rel="stylesheet" href="./assets/css/nav.css">
+    <link rel="stylesheet" href="./assets/css/search.css">
     <script src="./assets/js/jquery-1.11.1.min.js"></script>
       <!--百度统计工具-->
       <script>
@@ -131,6 +132,7 @@
             </div>
         </div>
         <div class="main-content" style="background-color: ;">
+            <script src="./assets/js/search.js"></script>
             <!-- 学校网页 -->
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="学校网页"></i>学校网页</h4>
             <div class="row">
@@ -349,6 +351,7 @@
                         &copy; 2020 - now&nbsp; &nbsp; &nbsp; &nbsp; 
                         <a href="https://nav.jiehua1995.xyz"><strong>Scholar Navigation</strong></a> designed by <a href="http://blog.jiehua1995.xyz" target="_blank"><strong>Jie and Linqi</strong></a>
                     </div>
+
                     <!-- Go to Top Link, just add rel="go-top" to any link to add this functionality -->
                     <div class="go-up">
                         <a href="#" rel="go-top">
