背景樱花飘动

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@ gtag('config', 'UA-164484990-1');
                             <h4 class="text-gray">关于作者</h4>
                             <div class="row">
                                 <div class="col-sm-4">
-                                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://nav.jiehua1995.xyz/fudan.html', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="我非常喜欢我的女朋友">
+                                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.location.href='./fudan.html'; return false" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="我非常喜欢我的女朋友">
                                         <div class="xe-comment-entry">
                                             <a class="xe-user-img">
                                                 <img src="./assets/images/jie.jpg" class="img-circle" width="40">
@@ -111,7 +111,7 @@ gtag('config', 'UA-164484990-1');
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
-                                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://nav.jiehua1995.xyz/huashi.html', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="她是最可爱的女生.">
+                                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.location.href='./huashi.html'; return false" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="她是最可爱的女生.">
                                         <div class="xe-comment-entry">
                                             <a class="xe-user-img">
                                                 <img src="./assets/images/linqi.jpg" class="img-circle" width="40">
@@ -120,7 +120,7 @@ gtag('config', 'UA-164484990-1');
                                                 <a href="#" class="xe-user-name overflowClip_1">
                                                     <strong>Linqi</strong>
                                                 </a>
-                                                <p class="overflowClip_2">Interested in classics.</p>
+                                                <p class="overflowClip_2">Interested in Chinese classic literature.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -148,6 +148,10 @@ gtag('config', 'UA-164484990-1');
     <script src="./assets/js/joinable.js"></script>
     <script src="./assets/js/xenon-api.js"></script>
     <script src="./assets/js/xenon-toggles.js"></script>
+
+    <script src="./assets/js/hititle.js"></script>
+    <script src="./assets/js/sakura.js"></script>
+    <script src="./assets/js/love.js"></script>
     <!-- JavaScripts initializations and stuff -->
     <script src="./assets/js/xenon-custom.js"></script>
     <textarea tabindex="-1" style="position: absolute; top: -999px; left: 0px; right: auto; bottom: auto; border: 0px; padding: 0px; box-sizing: content-box; word-wrap: break-word; overflow: hidden; transition: none; height: 0px !important; min-height: 0px !important; font-family: Arimo, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; font-weight: 400; font-style: normal; letter-spacing: 0px; text-transform: none; word-spacing: 0px; text-indent: 0px; line-height: 18.5714px; width: 53px;" class="autosizejs" id="autosizejs"></textarea>
