--- a/fudan.html
+++ b/fudan.html
@@ -334,7 +334,7 @@
             </div>
             <!--第二行-->
             <br>
-            <!-- END 杂志-->
+            <!-- END 英语学习-->
 
 
 
@@ -349,7 +349,7 @@
                 <div class="footer-inner">
                     <div class="footer-text">
                         &copy; 2020 - now&nbsp; &nbsp; &nbsp; &nbsp; 
-                        <a href="https://nav.jiehua1995.xyz"><strong>Scholar Navigation</strong></a> designed by <a href="http://blog.jiehua1995.xyz" target="_blank"><strong>Jie and Linqi</strong></a>
+                        <a href="https://nav.jiehua1995.xyz"><strong>Scholar Navigation</strong></a> designed by <a href="http://nav.jiehua1995.xyz" target="_blank"><strong>Jie and Linqi</strong></a>
                     </div>
 
                     <!-- Go to Top Link, just add rel="go-top" to any link to add this functionality -->
@@ -432,6 +432,11 @@
     <script src="./assets/js/joinable.js"></script>
     <script src="./assets/js/xenon-api.js"></script>
     <script src="./assets/js/xenon-toggles.js"></script>
+
+    
+    <script src="./assets/js/hititle.js"></script>
+
+    <script src="./assets/js/love.js"></script>
     <!-- JavaScripts initializations and stuff -->
     <script src="./assets/js/xenon-custom.js"></script>
     <script src="./assets/js/lozad.js"></script>
