--- a/about.html
+++ b/about.html
@@ -126,6 +126,10 @@ gtag('config', 'UA-164484990-1');
                                     </div>
                                 </div>
                             </div>
+                        </br>
+                            <div class="row">
+                            
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -138,6 +142,7 @@ gtag('config', 'UA-164484990-1');
                         <a href="https://nav.jiehua1995.xyz"><strong>Scholar Navigation</strong></a> designed by <strong>Jie and Linqi</strong>
                     </div>
                 </div>
+                
             </footer>
         </div>
     </div>
