Add he weather in index and about

--- a/index.html
+++ b/index.html
@@ -68,6 +68,36 @@ gtag('config', 'UA-164484990-1');
                 </a>      
             </div>
             <div class="navbar-mobile-clear"></div>
+<!--天气插件-->
+            <div id="he-plugin-simple"></div>
+            <script>
+                WIDGET = {
+                    CONFIG: {
+                      "modules": "10234",
+                       "background": 5,
+                       "tmpColor": "000000",
+                       "tmpSize": 16,
+                       "cityColor": "000000",
+                       "citySize": 16,
+                       "aqiSize": 16,
+                       "weatherIconSize": "26",
+                       "alertIconSize": 18,
+                       "padding": "10px 10px 10px 10px",
+                       "shadow": "1",
+                       "language": "auto",
+                       "borderRadius": 5,
+                       "fixed": "true",
+                       "vertical": "middle",
+                       "horizontal": "right",
+                       "right": 10,
+                       "top": 20,
+                       "key": "87ecbe407bec4323bf73b4edfe23b4a1"
+  }
+}
+
+            </script>
+            <script src="https://widget.heweather.net/simple/static/js/he-simple-common.js?v=1.1"></script>
+<!--END:天气插件-->
         </div>
     </nav>
     <div class="page-container">
