Mobile logo set

--- a/fudan.html
+++ b/fudan.html
@@ -67,9 +67,9 @@
                     <div class="logo">
                         <a href="index.html" class="logo-expanded">
                             <img src="./assets/images/logo_big.png" width="100%" alt="" />
-                        </a>
+                        </a>S
                         <a href="index.html" class="logo-collapsed">
-                            <img src="./assets/images/logo.png" width="40px" alt="" />
+                            <img src="./assets/images/logo_small.png" width="40px" alt="" />
                         </a>
                     </div>
                     <div class="mobile-menu-toggle visible-xs">
@@ -131,7 +131,12 @@
                 </ul>
             </div>
         </div>
-        <div class="main-content" style="background-color: ;">
+
+
+        <div class="main-content">
+
+            
+            <!--搜索栏-->
             <script src="./assets/js/search.js"></script>
             <!-- 学校网页 -->
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="学校网页"></i>学校网页</h4>
