--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ gtag('config', 'UA-164484990-1');
             <div class="navbar-brand">
                 <a href="./index.html" class="logo">
                     <img src="./assets/images/logo_big.png" height="40px" alt="" class="hidden-xs">
-                    <img src="./assets/images/logo_big.png" height="40px" alt="" class="visible-xs">
+                    <img src="./assets/images/logo_small.png" height="40px" alt="" class="visible-xs">
                 </a>      
             </div>
             <div class="navbar-mobile-clear"></div>
