--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <title>Nav 404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
     <link rel="shortcut icon" href="./assets/images/favicon.png">  
+    <script src="/assets/js/baidu_push.js"></script>
  <!--百度统计工具-->
  <script>
         var _hmt = _hmt || [];
