--- a/fudan.html
+++ b/fudan.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/css/nav.css">
     <link rel="stylesheet" href="./assets/css/search.css">
     <script src="./assets/js/jquery-1.11.1.min.js"></script>
+    <script src="/assets/js/baidu_push.js"></script>
       <!--百度统计工具-->
       <script>
         var _hmt = _hmt || [];
