--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./assets/css/xenon-skins.css">
     <link rel="stylesheet" href="./assets/css/nav.css">
     <script src="./assets/js/jquery-1.11.1.min.js"></script>
+    <script src="/assets/js/baidu_push.js"></script>
     
    <!--百度统计工具-->
  <script>
@@ -159,6 +160,8 @@ gtag('config', 'UA-164484990-1');
             </footer>
         </div>
     </div>
+
+
     <!-- Bottom Scripts -->
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="./assets/js/TweenMax.min.js"></script>
