--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Nav 404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
+    <meta name="baidu-site-verification" content="ma5nQjCRu9" />
     <link rel="shortcut icon" href="./assets/images/favicon.png">  
     <script src="/assets/js/baidu_push.js"></script>
  <!--百度统计工具-->
