--- a/fudan.html
+++ b/fudan.html
@@ -9,6 +9,7 @@
     <title>导航-复旦</title>
     <meta name="keywords" content="导航,复旦大学,华东师范大学,情侣导航,Navigation,学术导航">
     <meta name="description" content="情侣公用的学术导航">
+    <meta name="baidu-site-verification" content="ma5nQjCRu9" />
     <link rel="shortcut icon" href="./assets/images/favicon.png">
     <link rel="stylesheet" href="./assets/css/googlefont.css">
     <link rel="stylesheet" href="./assets/css/fonts/linecons/css/linecons.css">
