--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="导航,复旦大学,华东师范大学,情侣导航,Navigation,学术导航">
     <meta name="description" content="情侣公用的学术导航">
     <meta name="baidu-site-verification" content="ma5nQjCRu9" />
-    <meta http-equiv="Refresh" content="10">
+    <!--<meta http-equiv="Refresh" content="10">-->
     <link rel="shortcut icon" href="./assets/images/favicon.png">
     <link rel="stylesheet" href="./assets/css/googlefont.css">
     <link rel="stylesheet" href="./assets/css/fonts/linecons/css/linecons.css">
@@ -110,9 +110,11 @@ gtag('config', 'UA-164484990-1');
                     <div class="panel panel-default" style="margin-top: 200px; margin-left: 50%; transform:translate(-50%,-50%); width: 80%;">
                         <div class="panel-body">
 <!--打字机效果-一言网一句引入-->
-                        <script src="./assets/js/typed.js"></script>
+                        <!--<script src="./assets/js/typed.js"></script>>-->
                         <span id="hitokoto" style="font-size: 25px; font-family:Microsoft YaHei;"></span>
                         <script src="./assets/js/hitikoto.js"></script>
+
+
 <!--END:打字机效果-一言网一句引入-->
                             <div class="row">
                                 <script src="./assets/js/sakura.js"></script>
