--- a/fudan.html
+++ b/fudan.html
@@ -111,7 +111,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="./abc/index.html">
+                        <a href="./abc/search.html">
                             <i class="linecons-search"></i>
                             <span class="title">搜索引擎</span>
                         </a>
