--- a/huashi.html
+++ b/huashi.html
@@ -108,7 +108,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="./abc/search.html">
+                        <a href="./search.html">
                             <i class="linecons-search"></i>
                             <span class="title">搜索引擎</span>
                         </a>
