--- a/search.html
+++ b/search.html
@@ -32,10 +32,7 @@
 	 </script>
 	 <!--百度联盟-->
 	 <meta name="baidu_union_verify" content="b206d29f94c858c7cf27cf3e8fc57155">
-     <!--谷歌广告-->
-     <script data-ad-client="ca-pub-3613051181626775" async 
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
-      </script>
+
 
 </head>
 
@@ -75,7 +72,7 @@
 			<script src="./abc/js/search.js"></script>
 
 			<div class="foot">
-				<a href="https://nav.jiehua1995.xyz/abc/index.html" target="_blank" class="embed">
+				<a href="./index.html" target="_blank" class="embed">
 					Scholar Navigation
 				</a>
 			</div>
