remove embed files

--- a/search.html
+++ b/search.html
@@ -9,17 +9,17 @@
 	<meta name="description" content="A powerful scholar navigation which can help us to search articles quickly.">
 	<meta name="keywords" content="Scholar, Navigation, 学术, 导航, 搜索">
 	<!--定义页面格式-->
-	<link href="./abc/css/style.css" rel="stylesheet">
+	<link href="./abc-css/style.css" rel="stylesheet">
 	<!--定义图标-->
-	<link rel="shortcut icon" href="./abc/img/favicon.ico">
+	<link rel="shortcut icon" href="./abc-img/favicon.ico">
 	<!--定义搜索栏字体-->
-	<link href="./abc/font/embed.css" rel="stylesheet">
+	<link href="./abc-font/embed.css" rel="stylesheet">
 	<!--定义搜索栏图标。使用了阿里图标-->
 	<link href="https://at.alicdn.com/t/font_1727338_ccxjtmr3yek.css" rel="stylesheet">
 	<!--Jquery切换搜索引擎-->
 	<script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
 	<!--定义搜索框的格式-->
-	<link href="./abc/css/search.css" rel="stylesheet">
+	<link href="./abc-css/search.css" rel="stylesheet">
 	<!--百度统计-->
 	<script>
             var _hmt = _hmt || [];
@@ -69,7 +69,7 @@
 			</section>
 			</div>
 
-			<script src="./abc/js/search.js"></script>
+			<script src="./abc-js/search.js"></script>
 
 			<div class="foot">
 				<a href="./index.html" target="_blank" class="embed">
