--- a/fudan.html
+++ b/fudan.html
@@ -104,6 +104,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="#生信分析" class="smooth">
+                                    <span class="title">生信分析</span>
+                                </a>
+                            </li>
+                            <li>
                                 <a href="#英语学习" class="smooth">
                                     <span class="title">英语学习</span>
                                 </a>
@@ -247,7 +252,7 @@
             <!-- END 文献检索-->
 
 
-            <!--杂志-->
+            <!--学术期刊-->
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="学术期刊"></i>学术期刊</h4>
             <div class="row">
                 <div class="col-sm-3">
@@ -316,7 +321,32 @@
             </div>
             <!--第二行-->
             <br>
-            <!-- END 杂志-->
+            <!-- END 学术期刊-->
+
+            <!--生信分析-->
+            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="生信分析"></i>生信分析</h4>
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://busca.biocomp.unibo.it/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Subcellular Component Annotator">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="./assets/images/logos/busca.png" class="lozad img-circle" width="40">
+                            </a>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>BUSCA</strong>
+                                </a>
+                                <p class="overflowClip_2">Bologna Unified Subcellular Component Annotator</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+               
+
+            </div>
+            <!--第二行-->
+            <br>
+            <!-- END 生信分析-->
 
             <!--英语学习-->
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="英语学习"></i>英语学习</h4>
